Chapter02/ch2.3 - frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    name: frontend
spec:
  selector:
    name: frontend
  type:
    NodePort
  ports:
  - port: 80
    nodePort: 30001
